# Scan_Track

./: .gitignore  autocor_one_chain.py  movie_from_TRACK.py  pyproject.toml  scan_track.py  script.spt
scan_track/: __init__.py  acf.py  attached_list.py  autocor_one_chain.py  clusterization.py  helix.py  instance.py  movie_from_TRACK.py  periodic_box.py  rdf.py  scan_track.py  structure_factor.py
trajectory_sample/: BONDS
